[tool.poetry]
name = "french-immersion"
version = "0.1.0"
description = "Une collection de traducteurs connectes avec FastAPI"
authors = ["JD <10216562+joeld1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
